--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "docs": "typedoc ./src/",
         "format": "prettier --write '**/*.{js,ts,jsx,tsx,json,yml,yaml,html}' '!lib' '!docs' '!leetcode' '!site' '!site_tmp' '!demo.yml'",
         "lint": "eslint .",
-        "ts": "ts-node src/leetcode-dump.ts -h"
+        "ts": "ts-node src/leetcode-dump.ts -s {add token}"
     },
     "keywords": [
         "leetcode",
